--- a/src/components/AddPlayer/AddPlayer.css
+++ b/src/components/AddPlayer/AddPlayer.css
@@ -1,3 +1,26 @@
 .AddPlayer {
-  border: 1px solid black;
+  max-width: 500px;
+  width: 100%;
+}
+
+.AddPlayer__input {
+  margin-right: 2rem;
+  font-family: inherit;
+  max-width: 200px;
+  width: 100%;
+}
+
+.AddPlayer__input::placeholder {
+  font-family: 'Libre Baskerville', serif;
+}
+
+.AddPlayer__submit {
+  font-family: inherit;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 16px;
+  vertical-align: bottom;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
